# spiraldelta-db

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  BERT_OPTIMIZATION_COMPLETE.md  BUSINESS_PRESENTATION_MATERIALS.md  BUSINESS_TRANSLATION_FRAMEWORK.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_SETUP.md  Dockerfile  ENTERPRISE_TECHNICAL_SPECIFICATIONS.md  FINAL_REPOSITORY_SUMMARY.md  IMPLEMENTATION_STATUS.md  KINDNESS_ALGORITHM_COMPLETE.md  LICENSE  MARKETING_MATERIALS.md  PRIVATE_INTEGRATION.md  PROJECT_SUMMARY.md  PUBLIC_PRIVATE_STRATEGY.md  README.md  REPOSITORY_ARCHITECTURE.md  RUN_DASHBOARD.md  STREAMLIT_DEMO_README.md  basic_test.py  build_rust.py  business_translation.py  minimal_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  streamlit_demo.py  streamlit_demo_safe.py  streamlit_test.py
.github/workflows/: ci-cd.yml  ci.yml
data/: bert_production_profiles.json  fast_quality_optimization.json  final_bert_optimization_results.json
docs/: API.md  GETTING_STARTED.md
examples/: basic_usage.py  kindness_algorithm_demo.py  kindness_test_simple.py  rag_system.py
scripts/: benchmark.py  benchmark_gpu.py  bert_benchmark.py  bert_dataset_manager.py  bert_optimization.py  build_gpu.sh  compression_validation.py  create_synthetic_glove.py  dataset_manager.py  download_glove.py  fast_quality_tune.py  final_benchmark.py  final_bert_benchmark.py  glove_benchmark.py  glove_optimization.py  health_check.py  pre_commit_security.py  production_profiles.py  quality_optimization.py  quick_scale_demo.py  safe_git_push.py  scale_testing.py  search_quality_optimizer.py  security_audit.py  status.sh
spiraldelta-distributed/: Cargo.toml
spiraldelta-distributed/src/: consensus.rs  coordinator.rs  gateway.rs  lib.rs  load_balancer.rs  monitoring.rs  partitioning.rs  query_engine.rs  replication.rs  worker.rs
spiraldelta-gpu/: Cargo.toml
spiraldelta-gpu/src/: index.rs  kernels.rs  lib.rs  memory.rs  search.rs  spiral.rs
src/spiraldelta/: __init__.py  database.py  delta_encoder.py  gpu_acceleration.py  search_engine.py  spiral_coordinator.py  storage.py  types.py
tests/: __init__.py  conftest.py  test_database.py  test_delta_encoder.py  test_spiral_coordinator.py
