[package]
name = "spiraldelta-gpu"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated components for SpiralDeltaDB"

[lib]
name = "spiraldelta_gpu"
crate-type = ["cdylib", "rlib"]

[dependencies]
# CUDA support
cudarc = { version = "0.10", features = ["std", "driver"], optional = true }
candle-core = { version = "0.3", features = ["cuda"] }
candle-nn = "0.3"

# Math and linear algebra
ndarray = "0.15"
faer = "0.16"
rayon = "1.7"

# Serialization and interop
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
numpy = "0.20"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Performance monitoring
criterion = { version = "0.5", optional = true }

[features]
default = ["cuda"]
cuda = ["cudarc", "candle-core/cuda"]
benchmarks = ["criterion"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

# [[bench]]
# name = "gpu_benchmarks"
# harness = false
# required-features = ["benchmarks"]